syntax = "proto3";
option go_package = "/pb";
//import "google/protobuf/empty.proto"; // Import the empty.proto file
message Housekeeper {
    int32 id = 1;
    string firstname = 2;
    string lastname = 3;
    string phone = 4;
}

service HousekeeperService {
    // Create a new Housekeeper
    rpc CreateHousekeeper (CreateHousekeeperRequest) returns (Housekeeper);

    // Get a Housekeeper by ID
    rpc GetHousekeeper (GetHousekeeperRequest) returns (Housekeeper);

    // Get all Housekeepers
    rpc GetAllHousekeepers (GetAllHousekeeperRequest) returns (HousekeeperList);

    // Update an existing Housekeeper
    rpc UpdateHousekeeper (UpdateHousekeeperRequest) returns (Housekeeper);

    // Delete a Housekeeper by ID
    rpc DeleteHousekeeper (DeleteHousekeeperRequest) returns (DeleteHousekeeperResponse);
}

message CreateHousekeeperRequest {
    string firstname = 1;
    string lastname = 2;
    string phone = 3;
}

message GetHousekeeperRequest {
    int32 id = 1;
}

message HousekeeperList {
    repeated Housekeeper housekeepers = 1;
}

message GetAllHousekeeperRequest {

}

message UpdateHousekeeperRequest {
    Housekeeper housekeeper = 2;
}

message DeleteHousekeeperRequest {
    int32 id = 1;
}

message DeleteHousekeeperResponse {

}
